--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -143,6 +143,17 @@ section.intro-section-2:before {
   position: absolute;
   background-size: 27px;
 }
+section.intro-section-2:after {
+	content: "";
+	background: url("/assets/images/slices/profile/zz-blue-transparent.png");
+	width: 100%;
+  height: 20px;
+  bottom: -20px;
+  position: absolute;
+  background-size: 27px;
+  left: 0px;
+  z-index: 2;
+}
 section.intro-section-3:before {
   content: "";
   background: url("/assets/images/slices/profile/zz-white.png");
